# Meeting-AI

./: .env.example  .gitignore  README.md  action_item_agent.py  asr_agent.py  environment.yml  guide.md  llm_tools.py  orchestrator.py  pyproject.toml  requirements.txt  sentiment_agent.py  summary_agent.py  translation_agent.py
data/eval/: asr_manifest.sample.jsonl  sentiment_labels.benchmark_v2.jsonl  sentiment_labels.sample.jsonl  summary_manifest.sample.jsonl
demo/: demo_script.md  highlight_demo_transcript.md  judge_quick_start.md  presentation_outline.md  qna_bank.md  recording_runbook.md
reports/: final_project_report.md  hybrid_retrieval_documentation.md  streaming_mvp_documentation.md  voiceprint_documentation.md  week1_documentation.md  week2_documentation.md  week3_5_progress_report.md  week3_documentation.md  week4_experiments.md
reports/week4/: architecture_eval.json  asr_eval.json  sentiment_eval.json  summary_eval.json
scripts/: bootstrap_week1.ps1  check_env.py  enroll_voiceprint.py  streaming_demo_client.py  week1_demo.py  week2_demo.py  week35_report.py  week3_demo.py  week4_architecture_eval.py  week4_asr_eval.py  week4_sentiment_eval.py  week4_summary_eval.py  week5_materials.py
tests/: test_action_item_agent.py  test_api.py  test_asr_agent.py  test_baseline.py  test_evaluation.py  test_final_materials.py  test_llm_tools.py  test_orchestrator.py  test_reporting.py  test_retrieval.py  test_sentiment_agent.py  test_streaming.py  test_summary_agent.py  test_translation_agent.py  test_ui_app.py  test_voiceprint.py
ui/: app.py
(+25 files in other folders)
