[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-ai"
version = "0.1.0"
description = "Week 1 deliverable for the Meeting AI project."
readme = "README.md"
requires-python = ">=3.10,<3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

